# minions

./: .gitignore  AUTO_ATTACH_IMPLEMENTATION.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  Makefile  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  README.md  mise.toml
.cargo/: config.toml  zigcc.sh
crates/minions/: Cargo.toml
crates/minions-agent/: Cargo.toml
crates/minions-agent/src/: exec.rs  file.rs  main.rs  network.rs
crates/minions-db/: Cargo.toml
crates/minions-db/src/: lib.rs
crates/minions-host/: Cargo.toml
crates/minions-host/src/: main.rs
crates/minions-node/: Cargo.toml
crates/minions-node/src/: backup.rs  hypervisor.rs  lib.rs  main.rs  network.rs  storage.rs  vm.rs  volume.rs
crates/minions-proto/: Cargo.toml
crates/minions-proto/src/: lib.rs
crates/minions-proxy/: Cargo.toml
crates/minions-proxy/src/: auth.rs  connection_limit.rs  db.rs  lib.rs  metrics.rs  proxy.rs  rate_limit.rs  tls.rs  tls_simple.rs
crates/minions-ssh/: Cargo.toml
crates/minions-ssh/src/: commands.rs  db.rs  lib.rs  proxy.rs  server.rs
crates/minions-volume/: Cargo.toml  README.md
crates/minions-volume/src/: cache.rs  lib.rs  nbd.rs  s3.rs  sync.rs  volume.rs
crates/minions-vsock-cli/: Cargo.toml
crates/minions-vsock-cli/src/: main.rs
crates/minions/src/: agent.rs  api.rs  auth.rs  client.rs  dashboard.rs  db.rs  dns.rs  host_client.rs  hypervisor.rs  init.rs  main.rs  metrics.rs  network.rs  scheduler.rs  server.rs  storage.rs  vm.rs  volume.rs
crates/minions/templates/: base.html  dashboard.html  login.html  metrics_fragment.html  vm_detail.html  vms_fragment.html
docs/: INSTALL.md  phase-1-setup.md  phase-2-setup.md  phase-3-setup.md  phase-4-setup.md  phase-5-setup.md  phase-6-setup.md  phase-7-setup.md  sketch-plan.md  volumes.md
images/: Dockerfile  Dockerfile.fedora
images/nixos/: configuration.nix  flake.nix
scripts/: bake-agent.sh  bake-fedora-agent.sh  build-base-image.sh  build-fedora-cloud.sh  build-nixos-image.sh  install.sh
