[package]
name = "minions-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minions-agent"
path = "src/main.rs"

[dependencies]
minions-proto = { path = "../minions-proto" }
tokio = { workspace = true }
tokio-vsock = "0.7"
nix = { version = "0.30", features = ["net", "process", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
