[package]
name = "minions-db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
