[package]
name = "minions-proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "minions_proxy"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
http = "1"
serde_urlencoded = "0.7"
subtle = { workspace = true }

# TLS and ACME support
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
instant-acme = "0.8"
rcgen = "0.13"
rustls-pemfile = "2"
hickory-resolver = "0.24"
dashmap = "6"
axum-server = { version = "0.7", features = ["tls-rustls"] }
x509-parser = "0.16"
