[package]
name = "minions-ssh"
version = "0.1.0"
edition = "2021"

[lib]
name = "minions_ssh"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
