[package]
name = "minions-volume"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Async trait support
async-trait = "0.1"

# NBD protocol
byteorder = "1"

# Bitmaps for dirty/present tracking
bitvec = "1"

# S3 storage
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }

# Utilities
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
